# stock-nodeplugin

./: README.md  package.json
native/: Cargo.toml  artifacts.json
native/src/: lib.rs
native/src/calculate/: calculate_low.rs  mod.rs
native/src/results/: mod.rs  result.rs
native/src/sql/: mod.rs
