[package]
name = "cl-rust"
version = "0.1.0"
authors = ["Cassiopeia <wang_qingchun@outlook.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "cl_rust"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
libc = "0.2.0"
ocl = "0.19"
sqlx = { version = "0.3.5", default-features = false, features = [ "runtime-tokio", "macros", "chrono", "bigdecimal" ] }
once_cell = "1.4.0"
redis = "0.16.0"
