[package]
name = "cl-rust"
version = "0.1.0"
authors = ["Cassiopeia <wang_qingchun@outlook.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "cl_rust"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
libc = "0.2.0"
chrono = "0.4.13"
ocl = "0.19"
async-std = { version = "1.5.0", features = ["attributes"] }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "mysql", "runtime-async-std", "macros", "chrono", "bigdecimal" ] }
once_cell = "1.4.0"
redis = "0.16.0"
futures = { version= "0.3.5", features = ["thread-pool"] }
